syntax="proto3";

option go_package = "github.com/GuiMaron/gocourse/pcbook/proto;pcbook";

package proto;

import "proto/memory_message.proto";

message CPU {
    string  brand       = 1;
    string  name        = 2;
    uint32  cores       = 3;
    uint32  threads     = 4;
    float   min_clock   = 5;
    float   max_clock   = 6;
}

message GPU {
    string  brand       = 1;
    string  name        = 2;
    float   min_clock   = 3;
    float   max_clock   = 4;
    Memory  memory      = 5;
}
